# pkvid

./: .dockerignore  .gitignore  .gitlab-ci.yml  .releaserc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docs/: CHANGELOG.md  index.rst  site.yaml
pkvid/: blender.py  cli.py  config.py  driver.py  filters.py  install.py  models.py  models2.py  project.py
pkvid/models/: clip.py  project_config.py
scripts/: install.sh  pkvid  uninstall.sh
test/: sample_config.json  sample_config.yaml  test_config.py  test_integration.py  test_project.py
test/integration/: pkvid.yaml
