[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pkvid"
version = "0.1.0"
description = "Python package intended to help with automation of video editing"
authors = ["Steve G <pagekeysolutions@gmail.com>"]

[tool.poetry.scripts]
pkvid = 'pkvid.cli:cli_entry_point'