[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pkvid"
version = "0.1.0"
description = "Python package intended to help with automation of video editing"
authors = ["Steve G <pagekeysolutions@gmail.com>"]

# [tool.poetry.scripts]
# pkvid = 'pkvid.cli:main'

[tool.poetry.dependencies]
python = "==3.10.*"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
